<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_personal"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_personal" />
        <item
            android:id="@+id/nav_work"
            android:icon="@drawable/ic_tab_black_24dp"
            android:title="@string/nav_work" />
        <item
            android:id="@+id/nav_friend"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_friend" />
        <item
            android:id="@+id/nav_group"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_group" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_setting" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_about" />
        </menu>
    </item>

</menu>
